# task_manager_application

./: .dockerignore  .env.db.example  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  database.db  entrypoint.sh  k8s-app.yaml  k8s-postgres.yaml  pyproject.toml
.github/workflows/: _unit_test.yml  pipeline.yaml
fastapi_zero/: app.py  models.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todos.py  users.py
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
loadtests/k6/: users-create-get.js
migrations/: env.py
migrations/versions/: 1492c3101468_add_columns_created_at_and_updated_at.py  3c62cf35199b_create_todos_table.py  45b55d5a4959_create_users_table.py
monitoring/: grafana.yaml  k6-users-job.yaml
task_manager/: app.py  database.py  schemas.py  security.py  settings.py
task_manager/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_health.py  test_monitoring.py  test_security.py  test_todos.py  test_users.py
