[project]
name = 'fastapi-zero'
version = '0.1.0'
description = ''
authors = [
    {name = 'Your Name',email = 'you@example.com'}
]
readme = 'README.md'
requires-python = '>=3.13,<4.0'
dependencies = [
    'alembic (>=1.18.4,<2.0.0)',
    'fastapi[standard] (>=0.135.1,<0.136.0)',
    'pwdlib[argon2] (>=0.3.0,<0.4.0)',
    'pydantic-settings (>=2.13.1,<3.0.0)',
    'pyjwt (>=2.12.1,<3.0.0)',
    'aiosqlite (>=0.22.1,<0.23.0)',
    'sqlalchemy[asyncio] (>=2.0.48,<3.0.0)',
    'psycopg[binary] (>=3.3.3,<4.0.0)',
    'tzdata (>=2025.3,<2026.0)',
]


[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'

[dependency-groups]
dev = [
    'ruff (>=0.15.7,<0.16.0)',
    'pytest (>=9.0.2,<10.0.0)',
    'pytest-cov (>=7.1.0,<8.0.0)',
    'taskipy (>=1.14.1,<2.0.0)',
    'typos (>=1.44.0,<2.0.0)',
    'pytest-asyncio (>=1.3.0,<2.0.0)',
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.typos.files]
extend-exclude = ['*.md']

[tool.typos.default]
extend-ignore-identifiers-re = ['selectin']

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
core = 'ctrace'
concurrency = ['thread', 'greenlet']

[tool.taskipy.tasks]
clean = 'powershell -Command "Get-ChildItem -Path . -Directory -Filter __pycache__ -Recurse | Remove-Item -Recurse -Force"'
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uvicorn fastapi_zero.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
